# toy-language

./: .gitignore
doc/: REFACTOR_LOG.md  main.md
src/frontend/: Cargo.toml  ebpf.rs  lib.rs
src/frontend/elf_parser/: consts.rs
src/frontend/emitter/: dot.rs  json.rs  mlir.rs  mod.rs
src/frontend/ir/: mod.rs  types.rs
src/frontend/lifter/: elf.rs  mod.rs  parser.rs
src/frontend/tests/: test_elfs.rs
src/frontend/verify/: coverage.rs  diff.rs  mod.rs
src/mlir-backend/: Cargo.toml  INSTALL.md
src/mlir-backend/src/: builder.rs  ir.rs  lib.rs  main.rs
src/mlir-dialect/: CMakeLists.txt
src/mlir-dialect/include/sbpf/: SbpfDialect.h  SbpfDialect.td  SbpfOps.h  SbpfOps.td  SbpfPasses.h  SbpfPasses.td
src/mlir-dialect/lib/: SbpfDialect.cpp  SbpfOps.cpp  SbpfPasses.cpp
src/mlir-dialect/tools/: sbpf-opt.cpp
src/runtime/: CMakeLists.txt  sbpf_main_freestanding.c  sbpf_runtime.c  sbpf_runtime.h  sbpf_types.h  test_runtime.c
src/scripts/: build-runtime.sh  llvm-compile.sh  sbpf-compile.sh  sbpf-link.sh
src/test_output/: test.mlir  test.optimized.mlir
