[package]
name = "sbpf-frontend"
version = "0.1.0"
edition = "2021"
description = "sBPF ELF parser and lifter for MLIR translation"

[lib]
path = "lib.rs"

[dependencies]
thiserror = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana_rbpf = "0.8.5"

[dev-dependencies]

[[bin]]
name = "sbpf-lift"
path = "bin/main.rs"
