[package]
name = "sbpf-mlir"
version = "0.1.0"
edition = "2021"
description = "Target Generation Layer: MLIR backend for sBPF to RISC-V translation"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sbpf-mlir-gen"
path = "src/main.rs"

[dependencies]
# MLIR Rust bindings (use version matching LLVM 22)
# Note: melior 0.18 supports LLVM 18, you may need latest git version for LLVM 22
melior = { git = "https://github.com/raviqqe/melior.git", branch = "main", features = ["ods-dialects"] }

# For reading frontend output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
# If you need to generate TableGen files
# mlir-sys = "0.2"
